{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 150,
  "lineage": "1f25d32b-d5f6-4e5e-04e6-e16b6bf7f784",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/zones/us-central1-a/instanceGroups/my-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-05-15T02:55:29.908-07:00",
            "description": "My backend service",
            "enable_cdn": false,
            "fingerprint": "LNB_-YLLnBs=",
            "generated_id": -1160790146,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/global/healthChecks/my-health-check"
            ],
            "id": "projects/nimble-unison-386200/global/backendServices/my-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "my-backend-service",
            "port_name": "http",
            "project": "nimble-unison-386200",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/global/backendServices/my-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance_group.default",
            "google_compute_instance_template.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-05-15T01:06:44.841-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nimble-unison-386200/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/global/networks/newvpc",
            "priority": 1000,
            "project": "nimble-unison-386200",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-enabled"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web_firewall_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.110.200.31",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-05-15T03:21:46.793-07:00",
            "description": "My global address",
            "id": "projects/nimble-unison-386200/global/addresses/my-global-address",
            "name": "my-global-address",
            "prefix_length": 0,
            "project": "nimble-unison-386200",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/global/addresses/my-global-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.28.112.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-05-15T01:06:44.831-07:00",
            "id": "projects/nimble-unison-386200/global/addresses/private-ip-block",
            "name": "private-ip-block",
            "network": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/global/networks/newvpc",
            "prefix_length": 20,
            "project": "nimble-unison-386200",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/global/addresses/private-ip-block"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2004-focal-v20230427",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/zones/us-central1-a/disks/private-instancenew3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/nimble-unison-386200/zones/us-central1-a/instances/private-instancenew3",
            "instance_id": "6322569317456824386",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "OMd1hIyJDXM=",
            "metadata_startup_script": "#!/bin/bash\n\n# Install the necessary software\nsudo apt-get update\nsudo apt-get install -y apache2 php libapache2-mod-php\n\n# Create a sample PHP file\necho \"\u003c?php phpinfo(); ?\u003e\" | sudo tee /var/www/html/index.php\n\n# Start the Apache server\nsudo systemctl start apache2\n",
            "name": "private-instancenew3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/global/networks/newvpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/regions/us-central1/subnetworks/subnet-5",
                "subnetwork_project": "nimble-unison-386200"
              }
            ],
            "project": "nimble-unison-386200",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/zones/us-central1-a/instances/private-instancenew3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.regional_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/nimble-unison-386200/global/networks/newvpc",
            "mtu": 0,
            "name": "newvpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "nimble-unison-386200",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/global/networks/newvpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "regional_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-05-15T02:08:22.784-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/nimble-unison-386200/regions/us-central1/subnetworks/subnet-5",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnet-5",
            "network": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/global/networks/newvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "nimble-unison-386200",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nimble-unison-386200/regions/us-central1/subnetworks/subnet-5",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}